pepecoinify & update/fix/clean a bunch of stuff

--- a/ProjectData.json
+++ b/ProjectData.json
@@ -31,10 +31,10 @@
       "lightGray": "#efefef",
       "darkGray": "#6e6e6e",
       "white": "#FFF",
-      "purple": "#631e9a",
-      "darkPurple": "#57158f",
-      "mediumPurple": "#5d2390",
-      "lightPurple": "#a25ad7",
+      "purple": "#fff",
+      "darkPurple": "#fff",
+      "mediumPurple": "#fff",
+      "lightPurple": "#fff",
       "green": "#4f8e7b"
     },
     "currencies": {
